<resources>
    <string name="app_name">Walk a Friend</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fragment_trois_label">Fragment trois</string>

    <string name="page_acceuil2_label"></string>
    <string name="connexion_label"></string>
    <string name="inscription"></string>
    <string name="probleme_1"></string>


    <string name="previous">Previous</string>
    <string name="direction_button_trois">en Avant</string>

    <string name="hello_first_fragment">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="random_button_text">Aléatoire</string>
    <string name="toast_button_text">toast</string>
    <string name="count_button">Count</string>
    <string-array name="tel_countries">
        <item>+33</item>
        <item>ETC</item>

    </string-array>

    <string name="test">oui</string>
    <string name="title_activity_trajet2">Trajet2</string>
    <string name="next">Next</string>
    <string name="title_activity_trajet">Trajet</string>
    <string name="point_a">Part-Dieu</string>
    <string name="point_b">Charpenne</string>
    <string name="date_heure">21 H</string>
    <string name="calculer_trajet">Allons-y</string>
</resources>