<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connexion_de_depart"
    app:startDestination="@id/page_acceuil2">

    <fragment
        android:id="@+id/page_acceuil2"
        android:name="com.example.bsn_2024.Accueil"
        android:label="@string/page_acceuil2_label"
        tools:layout="@layout/page_accueil2">



        <action
            android:id="@+id/action_page_acceuil2_to_page_connexion1"
            app:destination="@id/connexion1"/>
        <action
            android:id="@+id/action_page_acceuil2_to_probleme_connexion"
            app:destination="@+id/probleme1"/>
        <action
            android:id="@+id/action_page_acceuil2_to_inscription"
            app:destination="@id/inscription"/>
    </fragment>

    <fragment
        android:id="@+id/connexion1"
        android:name="com.example.bsn_2024.Connexion"
        android:label="@string/connexion_label"
        tools:layout="@layout/connexion1">



    </fragment>

    <fragment
        android:id="@+id/inscription"
        android:name="com.example.bsn_2024.Inscription1"
        android:label="@string/inscription"
        tools:layout="@layout/page_inscription1">
        <action
            android:id="@+id/action_telephone_to_email"
            app:destination="@id/inscription2"/>
        <action
            android:id="@+id/retour_page_Acceuil"
            app:destination="@id/page_acceuil2"/>
        <action
            android:id="@+id/telephone_Mdp"
            app:destination="@id/Inscription3"/>
    </fragment>

    <fragment
        android:id="@+id/probleme1"
        android:name="com.example.bsn_2024.probleme_connexion"
        android:label="@string/probleme_1"
        tools:layout="@layout/probleme1">

    </fragment>

    <fragment
        android:id="@+id/inscription2"
        android:name="com.example.bsn_2024.Inscription2"
        android:label="inscription2"
        tools:layout="@layout/page_inscription2">

        <action
            android:id="@+id/action_email_to_telephone"
            app:destination="@id/inscription"/>
        <action
            android:id="@+id/retour_page_Acceuil"
            app:destination="@+id/page_acceuil2"/>
        <action
            android:id="@+id/email_Mdp"
            app:destination="@id/Inscription3"/>
    </fragment>
    <fragment
        android:id="@+id/Inscription3"
        android:name="com.example.bsn_2024.Inscription3"
        android:label="inscription3"
        tools:layout="@layout/page_inscription3">
        <action
            android:id="@+id/retour_email"
            app:destination="@id/inscription2"/>
        <action
            android:id="@+id/Mdp_prenom"
            app:destination="@id/inscription4"/>

    </fragment>
    <fragment
        android:id="@+id/inscription4"
        android:name="com.example.bsn_2024.Inscription4"
        android:label="inscription4"
        tools:layout="@layout/page_inscription4">
        <action
            android:id="@+id/retour_Mdp"
            app:destination="@id/Inscription3"/>
        <action
            android:id="@+id/prenom_DDN"
            app:destination="@id/inscription5"/>
    </fragment>
    <fragment
        android:id="@+id/inscription5"
        android:name="com.example.bsn_2024.Inscription5"
        android:label="inscription5"
        tools:layout="@layout/page_inscription5">
        <action
            android:id="@+id/retour_prenom"
            app:destination="@id/inscription4"/>
        <action
            android:id="@+id/continuerPrenom_DDN"
            app:destination="@+id/inscription6"/>
    </fragment>
    <fragment
        android:id="@+id/inscription6"
        android:name="com.example.bsn_2024.Inscription6"
        android:label="inscription6"
        tools:layout="@layout/page_inscription6">
        <action
            android:id="@+id/retour_DDN"
            app:destination="@+id/inscription5"/>
        <action
            android:id="@+id/continuer_genre_CGU"
            app:destination="@+id/inscription7"/>
    </fragment>
    <fragment
        android:id="@+id/inscription7"
        android:name="com.example.bsn_2024.Inscription7"
        android:label="inscription7"
        tools:layout="@layout/page_inscription7">
        <action
            android:id="@+id/retour_genre"
            app:destination="@+id/inscription6"/>
        <action
            android:id="@+id/continuerCGu_MenuPrinc"
            app:destination="@+id/Menu_principale"/>
    </fragment>
    <fragment
        android:id="@+id/Menu_principale"
        android:name="com.example.bsn_2024.menu_principale"
        android:label="main_menu"
        tools:layout="@layout/main_menu">

    </fragment>
</navigation>